centered error message

--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,10 @@ th,td {
   border-radius: 4px;
 }
 
+.centerContainer{
+  text-align: center;
+}
+
 .customContainer{
   margin: 0 auto;
   max-width: 100%;
