partly styled detailed card

--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,7 @@ th,td {
     color: transparent;
  }
 
-
 /* LOGO CSS */
-
 
 .logo {
   color: #fff;
@@ -41,3 +39,5 @@ th,td {
   letter-spacing: -4px;
   text-align: center;
 }
+
+/* STYLE CARD */
